--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div id="container">
         <nav id="game-list">
             <h2>ゲーム一覧</h2>
-            <button onclick="loadGame('janken')">じゃんけんゲーム (Flutter)</button>
+            <button onclick="loadGame('janken')">じゃんけんぽん</button>
+            <button onclick="loadGame('pipeflow')">PipeFlow</button>
             <button onclick="loadGame('game-puzzle')">パズルゲーム (Flutter)</button>
             <button onclick="loadGame('game-rpg')">RPG (Flutter)</button>
             <p class="guide">上のボタンをクリックしてゲームを開始してください。</p>
