--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                     alt="じゃんけんぽん" title="じゃんけんぽん" onclick="loadGame('janken')" class="game-icon">
                 <img src="https://play-lh.googleusercontent.com/46ws4b7uOe6w4TC7bCJplZ9HTQAolPwi3q-_Uudp3lGR4Xnes699sZ5rPLukjFChDvmrx1R8KzYpyuVTnRx1oA=w240-h480-rw"
                     alt="PipeFlow" title="PipeFlow" onclick="loadGame('pipeflow')" class="game-icon">
+                <img src="https://play-lh.googleusercontent.com/0fW7dJxrXcSgS1grhXJH_INUvkDRrRDsYfcXcp6pk28OGTCvYz13JMO2-MEHeH1rR9I=w240-h480-rw"
+                     alt="NumberSet" title="PipeFlow" onclick="loadGame('numberset')" class="game-icon">
                 <img src="https://via.placeholder.com/240x480.png?text=Puzzle" alt="パズルゲーム (Flutter)"
                     title="パズルゲーム (Flutter)" onclick="loadGame('game-puzzle')" class="game-icon">
                 <img src="https://via.placeholder.com/240x480.png?text=RPG" alt="RPG (Flutter)" title="RPG (Flutter)"
